# naive-tweet-recommender

./: .gitignore  CMakeLists.txt  dateutils.cpp  dateutils.h  evaluation.cpp  evaluation.h  extractTopicTiming.sql  gaoModel.kdev4  main.cpp  news.cpp  news.h  newsprofile.cpp  newsprofile.h  profile.h  profiles.cpp  profiles.h  sharednews.cpp  sharednews.h  tweetprofile.cpp  tweetprofile.h  userprofile.cpp  userprofile.h  users_good  utils.h  wi2011-user-sample.csv
stemmer/: CMakeLists.txt  indexer.cpp  rslpStemmer.c
test/: CMakeLists.txt  userprofiletests.cpp
topics/: lapata.py  topics.py  user_ids
